# FinAppWB

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
docker/: Dockerfile
src/: bot.py  config.tmpl  run.py
src/app/: handlers.py  keyboards.py  states.py  utils.py
src/app/callbacks/: __init__.py  accountant_navigation.py  admin_navigation.py  director_requests.py  manager_navigation.py  requests_action.py  users_action.py
src/app/database/: base_service.py  db_populate.py  models.py  service.py
src/app/handlers/: admin_handlers.py  common_handlers.py  request_create.py  start.py  user_registration.py
src/app/keyboards/: addresses_pagination.py  admin_menu.py  builders.py
src/app/middlewares/: media_middle_ware.py
src/app/notify/: notify_utils.py
src/app/tests/: test_start.py
